[package]
name = "botifactory-ota-nostd"
version = "0.1.0"
edition = "2021"

[dependencies]
portable-atomic = { version = "1.11.0", default-features = false, features = [
  "require-cas",
] }
log = { version = "0.4.22", default-features = false }
embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1" }
esp-partition-table = "0.1.3"
crc = "3.3.0"
thiserror = { version = "2.0.12", default-features = false }
botifactory-types = { git = "https://github.com/izzyhub/botifactory-types" }
#botifactory-types = { path = "../botifactory-types" }
reqwless = { version = "0.13", features = ["alloc"] }
semver = { version = "1.0.26", default-features = false, features = ["serde"] }
embedded-storage = "0.3.1"
embedded-nal-async = "0.8.0"
serde-json-core = { version = "0.6.0", features = ["heapless"] }
bytes = { version = "1.10.0", default-features = false, features = [
  "serde",
  "extra-platforms",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

#[profile.release.package."*"]
#opt-level = 'z'

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
#strip = true
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
panic = 'abort'
